--- a/client/templates/views/login.html
+++ b/client/templates/views/login.html
@@ -3,9 +3,12 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
                 <h1>Hey there! To Start, Login With Google</h1>
-                <a class="btn btn-primary btn-google btn-lg btn-social btn-login-google">
-                    <i class="fa fa-google"></i>
-                    Login with Google</a>
+                <a class="btn btn-primary btn-xing btn-lg btn-social btn-login-xing">
+                    <i class="fa fa-xing"></i>
+                    Login with Xing</a>
+                <a class="btn btn-primary btn-linkedin btn-lg btn-social btn-login-linkedin">
+                    <i class="fa fa-linkedin"></i>
+                    Login with LinkedIn</a>
             </div>
         </div>
     </div>
