--- a/client/styles/core/commons.less
+++ b/client/styles/core/commons.less
@@ -10,6 +10,11 @@
 {
     width: 100%;
 }
+.hide-text {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
 .pointer
 {
     cursor:pointer;
