--- a/client/styles/core/typography.less
+++ b/client/styles/core/typography.less
@@ -1,9 +1,10 @@
 h1
 {
+    color: #0a3d54;
     font-size:34px;
-    margin:0 0 15px 0;
-    line-height:1.6em;
-    font-weight: 700;
+    font-weight:400;
+    margin:0 0 10px 0;
+    line-height:1.2em;
 
     a.action
     {
@@ -16,7 +17,8 @@ h1
 
 h2
 {
-    font-size:24px;
+    color: #696969;
+    font-size:20px;
     margin:0 0 15px 0;
     font-weight:normal;
     padding-bottom:1px;
