--- a/client/templates/views/presentation/layout/header.html
+++ b/client/templates/views/presentation/layout/header.html
@@ -1,9 +1,27 @@
 <template name="presentation_header">
-    <header>
+    <header id="main-header">
         <div class="container">
-            <a href="/" class="header-title">
-                FirstGra.de
-            </a>
+            <ul class="pull-right list-inline">
+                <li>
+                    <a>LINK 1</a>
+                </li>
+                <li>
+                    <a>LINK 2</a>
+                </li>
+                <li>
+                    <a>LINK 3</a>
+                </li>
+                <li>
+                    <a>LINK 4</a>
+                </li>
+            </ul>
+
+            <h1 id="logo">
+                <a href="/" class="hide-text">
+                    4Scotty
+                    <span class="brand-logo"></span>
+                </a>
+            </h1>
         </div>
     </header>
 </template>
