--- a/client/styles/components/fancy-lines.less
+++ b/client/styles/components/fancy-lines.less
@@ -1,13 +1,25 @@
-.fancy-lines {
+.fancy {
+    line-height: 0.2;
     text-align: center;
-    border-bottom: 1px solid #090;
-    line-height: 0;
-    padding: 0;
-    margin:15px 0;
 }
-
-.fancy-lines span {
-    background: #fff;
-    padding: 0 15px;
-    color: #090;
+.fancy span {
+    display: inline-block;
+    position: relative;
+}
+.fancy span:before,
+.fancy span:after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    border-bottom: 2px solid #e15c10;
+    top: 0;
+    width: 35%;
+}
+.fancy span:before {
+    right: 100%;
+    margin-right: 15px;
+}
+.fancy span:after {
+    left: 100%;
+    margin-left: 15px;
 }
