--- a/client/styles/layout/presentation/header.less
+++ b/client/styles/layout/presentation/header.less
@@ -1,53 +1,49 @@
 @import '../../_base/mixins.import.less';
 
-header {
-    background: #5E5EBB;
-    padding: 20px;
-    color: #fff;
-    border-bottom: 1px solid #fff;
+header#main-header {
+    height: 60px;
+    line-height: 60px;
+    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
 
-    .header-title {
-        font-size: 26px;
-        color: #fff;
-        &:hover,
-        &:focus,
-        &:active {
+    a {
+        font-weight:400px;
+        padding:0 22px;
+        color: #0a3d54;
+        &:hover, &:active, &:visited {
+            color: #0a3d54;
             text-decoration: none;
-            color: #fff;
+        }
+        &:hover {
+            border-bottom:1px solid #0a3d54;
+            padding-bottom:4px;
         }
     }
 
-    .drop-shadow(255, 255, 5px, 0.5);
+    #logo {
+        margin-bottom: 0;
 
-    #login-buttons {
         a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 16px;
-            border: 2px solid #fff;
-            padding: 5px 10px;
-            .border-radius();
-            display: block;
-            margin-top: 7px;
-        }
-
-        .login-close-text {
-            color: #252525;
             position: relative;
-            text-transform: lowercase;
-            &:before {
-                content: "\f00d";
-                font-family: "FontAwesome";
-                font-size: 13px;
+            display: block;
+            width: 169px;
+            height: 60px;
+
+            span.brand-logo {
+                display: block;
                 position: absolute;
-                top: 8px;
-                left: -5px;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: url('/img/logo.png') no-repeat left center;
+                z-index: 100; /* Places <span> on top of <a> text */
             }
         }
-    }
-
-    #login-buttons-google {
-        margin-top: 10px;
-        font-size: 14px;
     }
 }
