--- a/client/templates/views/presentation/layout/main.html
+++ b/client/templates/views/presentation/layout/main.html
@@ -1,11 +1,13 @@
 <template name="PresentationLayout">
 
+    {{> presentation_header}}
+
     <div class="main-container">
         {{> yield}}
     </div>
 
     {{> footer}}
 
-    {{ > blocker }}
+    {{> blocker }}
     {{> autoformModals}}
 </template>
