--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,4 +1,6 @@
 <template name="presentation.home.main">
+    {{> presentation_modal_email_signup}}
+
     <div class="banner main-banner">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
