--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -10,27 +10,26 @@
                             <div class="padded">
                                 <div class="row">
                                     <div class="col-sm-offset-1 col-sm-10">
-                                        <h1>{{_ 'views_home_main.banner_title'}}</h1>
-
-                                        <h2>{{_ 'views_home_main.banner_subtitle'}}</h2>
+                                        <h1>{{t 'views.home.main.banner_title'}}</h1>
+                                        <h2>{{t 'views.home.main.banner_subtitle'}}</h2>
                                     </div>
                                 </div>
                             </div>
                             <div class="cta-container">
                                 <p class="cta layer">
-                                    <span>{{_ 'views_home_main.banner_cta'}}</span>
+                                    <span>{{t 'views.home.main.banner_cta'}}</span>
                                 </p>
                             </div>
                             <div class="padded">
                                 <a class="btn btn-primary btn-xing btn-social btn-login-xing">
                                     <i class="fa fa-xing"></i>
-                                    {{_ 'social.continue_xing'}}</a>
+                                    {{t 'commons.social.continue_xing'}}</a>
                                 <a class="btn btn-primary btn-linkedin btn-social btn-login-linkedin">
                                     <i class="fa fa-linkedin"></i>
-                                    {{_ 'social.continue_linkedin'}}</a>
+                                    {{t 'commons.social.continue_linkedin'}}</a>
                                 <span class="email-login-container">
                                     <a class="btn-login-email">
-                                    {{_ 'social.or_continue_with_email'}}
+                                    {{t 'commons.social.or_continue_with_email'}}
                                     </a>
                                 </span>
                             </div>
