--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,5 +1,6 @@
 <template name="presentation.home.main">
-    {{> presentation_modal_email_signup}}
-
-
+    <h2 class="text-center">Blablabla some fancy text</h2>
+    <section id="about">
+        ABOUT
+    </section>
 </template>
