--- a/client/styles/layout/presentation/main.less
+++ b/client/styles/layout/presentation/main.less
@@ -1,12 +1,12 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600);
 
 html,
 body{
     height:100%;
 }
 
-body{
-    font-family: 'Lato' !important;
+body, .btn{
+    font-family: 'Open Sans', sans-serif !important;
     text-decoration: none!important;
 }
 
