--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,5 +1,28 @@
 <template name="presentation.home.main">
-    <h2 class="text-center">Blablabla some fancy text</h2>
+    <h2>Blablabla some fancy text</h2>
+    <section id="provider">
+        <h2>Get somebody to shadow you <strong>for good</strong></h2>
+
+        <h3>It's easy. People bid. Winners shadows you.</h3>
+
+        <div class="row">
+            <div class="col-sm-offset-3 col-sm-2">
+                <a class="btn btn-lg btn-block btn-social btn-continue-twitter btn-twitter">
+                    <i class="fa fa-twitter"></i> Twitter
+                </a>
+            </div>
+            <div class="col-sm-2">
+                <a class="btn btn-lg btn-block btn-social btn-continue-facebook btn-facebook">
+                    <i class="fa fa-facebook"></i> Facebook
+                </a>
+            </div>
+            <div class="col-sm-2">
+                <a class="btn btn-lg btn-block btn-social btn-continue-linkedin btn-linkedin">
+                    <i class="fa fa-linkedin"></i> LinkedIn
+                </a>
+            </div>
+        </div>
+    </section>
     <section id="about">
         ABOUT
     </section>
