--- a/client/styles/core/typography.less
+++ b/client/styles/core/typography.less
@@ -13,6 +13,8 @@ h1
         font-weight:normal;
         margin-top:8px;
     }
+
+    text-align:center;
 }
 
 h2
@@ -20,8 +22,14 @@ h2
     color: #696969;
     font-size:20px;
     margin:0 0 15px 0;
-    font-weight:normal;
-    padding-bottom:1px;
+    font-weight:400;
+    text-align:center;
+}
+h3
+{
+    font-size:16px;
+    text-align:center;
+    font-weight:400;
 }
 
 .font20
