--- a/client/templates/views/presentation/layout/header.html
+++ b/client/templates/views/presentation/layout/header.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">I CAN GIVE SHADOW</a>
+                        <a class="page-scroll" href="#provider">BE A SHADOW MASTER</a>
                     </li>
                 </ul>
             </div>
