--- a/client/styles/core/forms.less
+++ b/client/styles/core/forms.less
@@ -10,15 +10,18 @@
         transition: all 0.3s linear;
         opacity: 0;
         font-weight: normal;
-        background:#fff;
-        padding:4px;
+        background:#eee;
+        padding:1px 4px;
         color:#444;
     }
     label.on {
         color: #4481C4;
     }
     label.active {
-        top: -15px;
+        top: -22px;
         opacity: 1;
+        border-left:1px solid #ccc;
+        border-top:1px solid #ccc;
+        border-right:1px solid #ccc;
     }
 }
