--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,27 +1,29 @@
 <template name="presentation.home.main">
     <h2>Blablabla some fancy text</h2>
-    <section id="provider">
+    <section id="provider" class="container text-center">
         <h2>Get somebody to shadow you <strong>for good</strong></h2>
 
         <h3>It's easy. People bid. Winners shadows you.</h3>
 
+        {{#if currentUser.anonymous}}
         <div class="row">
-            <div class="col-sm-offset-3 col-sm-2">
-                <a class="btn btn-lg btn-block btn-social btn-continue-twitter btn-twitter">
+            <div class="col-sm-offset-3 col-sm-6">
+                <a class="right10 btn btn-lg btn-social btn-continue-twitter btn-twitter">
                     <i class="fa fa-twitter"></i> Twitter
                 </a>
-            </div>
-            <div class="col-sm-2">
-                <a class="btn btn-lg btn-block btn-social btn-continue-facebook btn-facebook">
+                <a class="right10 btn btn-lg btn-social btn-continue-facebook btn-facebook">
                     <i class="fa fa-facebook"></i> Facebook
                 </a>
-            </div>
-            <div class="col-sm-2">
-                <a class="btn btn-lg btn-block btn-social btn-continue-linkedin btn-linkedin">
+                <a class="btn btn-lg btn-social btn-continue-linkedin btn-linkedin">
                     <i class="fa fa-linkedin"></i> LinkedIn
                 </a>
             </div>
         </div>
+        {{else}}
+            {{#autoForm class="adaptive-field-wrapper" schema=providerSchema id="insertCharityForm" type="insert" resetOnSuccess=false trimStrings=true}}
+                {{> afQuickField class='input-lg' name='charity' placeholder='schemaLabel'}}
+            {{/autoForm}}
+        {{/if}}
     </section>
     <section id="about">
         ABOUT
