--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -6,22 +6,49 @@
         <h3>It's easy. People bid. Winners shadows you.</h3>
 
         {{#if currentUser.anonymous}}
-        <div class="row">
-            <div class="col-sm-offset-3 col-sm-6">
-                <a class="right10 btn btn-lg btn-social btn-continue-twitter btn-twitter">
-                    <i class="fa fa-twitter"></i> Twitter
-                </a>
-                <a class="right10 btn btn-lg btn-social btn-continue-facebook btn-facebook">
-                    <i class="fa fa-facebook"></i> Facebook
-                </a>
-                <a class="btn btn-lg btn-social btn-continue-linkedin btn-linkedin">
-                    <i class="fa fa-linkedin"></i> LinkedIn
-                </a>
+            <div class="row">
+                <div class="col-sm-offset-3 col-sm-6">
+                    <a class="right10 btn btn-lg btn-social btn-continue-twitter btn-twitter">
+                        <i class="fa fa-twitter"></i> Twitter
+                    </a>
+                    <a class="right10 btn btn-lg btn-social btn-continue-facebook btn-facebook">
+                        <i class="fa fa-facebook"></i> Facebook
+                    </a>
+                    <a class="btn btn-lg btn-social btn-continue-linkedin btn-linkedin">
+                        <i class="fa fa-linkedin"></i> LinkedIn
+                    </a>
+                </div>
             </div>
-        </div>
         {{else}}
-            {{#autoForm class="adaptive-field-wrapper" schema=providerSchema id="insertCharityForm" type="insert" resetOnSuccess=false trimStrings=true}}
-                {{> afQuickField class='input-lg' name='charity' placeholder='schemaLabel'}}
+            {{#autoForm class="adaptive-field-wrapper" meteormethod='setCharity' schema=providerSchema id="insertCharityForm" type="method" trimStrings=true}}
+
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                        {{#if isApproved}}
+                            <div class="alert alert-success bottom30">
+                                You have been approved. Your auction will last 14 days.
+                            </div>
+                        {{else}}
+                            {{#if isValidating}}
+                                <div class="alert alert-success bottom30">
+                                    You are awesome. Let us have a think about this and we'll get back to you.
+                                <p>Messed up some details? No worries! Just fix them right below!</p>
+                                </div>
+                            {{/if}}
+                            {{> afQuickField value=skill class='input-lg' name='skill' class="bottom30" placeholder='schemaLabel'}}
+
+                            {{> afQuickField value=charity class='input-lg' name='charity' class="bottom30" placeholder='schemaLabel'}}
+
+                            {{> afQuickField value=charityDetails class='input-lg' name='charity_details' class="bottom30" placeholder='schemaLabel' type='textarea'}}
+
+                            {{#if isValidating}}
+                                <button type="submit" class="btn btn-lg btn-success btn-request-approval">Update Proposal</button>
+                            {{else}}
+                                <button type="submit" class="btn btn-lg btn-success btn-request-approval">Request Approval</button>
+                            {{/if}}
+                        {{/if}}
+                    </div>
+                </div>
             {{/autoForm}}
         {{/if}}
     </section>
