--- a/client/styles/core/typography.less
+++ b/client/styles/core/typography.less
@@ -19,11 +19,21 @@ h1
 
 h2
 {
-    color: #696969;
     font-size:20px;
     margin:0 0 15px 0;
     font-weight:400;
     text-align:center;
+
+    &.huge
+    {
+        font-size: 48px;
+    }
+
+    .bigger
+    {
+        font-size: 2em;
+
+    }
 }
 h3
 {
