--- a/client/templates/views/presentation/layout/header.html
+++ b/client/templates/views/presentation/layout/header.html
@@ -6,8 +6,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-users"></i>  <span class="light">CAN I HAZ</span> SHADOW?
+                <a class="navbar-brand page-scroll" href="/">
+                    <i class="fa fa-users"></i>  <span class="light">CAN I HAZ</span> SHADOW PLZ?
                 </a>
             </div>
 
@@ -19,10 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="#page-scroll" href="#masters">MASTERS</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#provider">BE A SHADOW MASTER</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">ABOUT US</a>
                     </li>
                     {{#if currentUser.registered}}
                         <li>
