--- a/client/templates/views/admin/layout/main.html
+++ b/client/templates/views/admin/layout/main.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FirstGra.de</title>
+    <title>Can I Haz Shadow Plz</title>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
