--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -9,7 +9,25 @@ body.presentation_auction_main
             font-size: 64px;
             color: #FA6900;
         }
+    }
+    .bidder-detail
+    {
+        .bidder-img
+        {
+            width: 80px;
+            display:inline-block;
+            vertical-align:middle;
 
+            .img-circle {
+                height:80px;
+                margin: 0;
+                vertical-align:middle;
+            }
+        }
+    }
+
+    .previousBids
+    {
         .bidder-img
         {
             width: 80px;
