--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,6 +1,6 @@
 <template name="presentation.home.main">
-    <h2>Blablabla some fancy text</h2>
-    <section id="shadowMasters">
+    <h1 class="page-title">Blablabla some <br> fancy text</h1>
+    <section id="shadowMasters" class="intro">
         <div class="container">
             {{#each shadowMasters}}
                 <div class="row">
