--- a/client/styles/components/shadow-master.less
+++ b/client/styles/components/shadow-master.less
@@ -16,4 +16,13 @@
         display:block;
         margin-bottom:15px;
     }
+
+    .subtitle
+    {
+        display: block;
+        background: #aaa;
+        color: #fff;
+        padding: 2px 4px;
+        margin-bottom:10px;
+    }
 }
