--- a/client/templates/views/presentation/payment/index.html
+++ b/client/templates/views/presentation/payment/index.html
@@ -3,7 +3,7 @@
         <div class="col-md-6 col-md-offset-3">
             <form id="checkout" method="post" action="/checkout">
                 <div id="payment-form"></div>
-                <input type="submit" class="btn btn-primary" value="Pay $10">
+                <input type="submit" class="btn btn-success btn-lg top15" value="Pay &euro;{{amount}}">
             </form>
         </div>
     </div>
