--- a/client/styles/layout/presentation/main.less
+++ b/client/styles/layout/presentation/main.less
@@ -94,3 +94,18 @@ body.presentation
 .page-title{
     text-shadow: 4px 4px 2px rgba(102, 5, 5, 1);
 }
+
+.img-master{
+    height: 150px;
+    width: 150px;
+}
+
+section{
+    margin:0 0 60px;
+}
+
+.adaptive-field-wrapper{
+    background:#fff;
+    padding:30px;
+    border-radius: 4px;
+}
