--- a/client/styles/lib/grayscale.css
+++ b/client/styles/lib/grayscale.css
@@ -10,6 +10,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-image:url(/img/banner.jpg);
+    background-attachment: fixed;
     background-position: center center;
     background-repeat:no-repeat;
     background-color:#0F0F0F;
